<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_OptoforceUDPRequest" Id="{76a083a7-b5c8-4d54-85e7-02720879f69d}">
    <Declaration><![CDATA[TYPE ST_OptoforceUDPRequest :
STRUCT
	Header : UINT; // Must be 0x1234
	Command : UINT; // Value according to the command table
	Data : UDINT; // data according to the actual command
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>